force-app/main/default/objects/Opportunity/fields/Funding_Focus__c.field-meta.xml
<CustomField>
    <fullName>Funding_Focus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store details of area to be focused on</description>
    <label>Funding Focus</label>
    <referenceTo>Funding_Focus__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>