force-app/main/default/objects/Opportunity/fields/Grantmaker_Type__c.field-meta.xml
<CustomField>
    <fullName>Grantmaker_Type__c</fullName>
    <label>Grantmaker Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>