force-app/main/default/objects/Opportunity/recordTypes/Grantmaker.recordType-meta.xml
<RecordType>
    <fullName>Grantmaker</fullName>
    <active>true</active>
    <businessProcess>Organization Sales Process</businessProcess>
    <label>Grant</label>
</RecordType>