force-app/main/default/objects/Opportunity/recordTypes/Individual_Donor.recordType-meta.xml
<RecordType>
    <fullName>Individual_Donor</fullName>
    <active>true</active>
    <businessProcess>Individual Donor</businessProcess>
    <label>Individual Donation</label>
</RecordType>